# CarBuyerAssistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
alembic/: env.py
alembic/versions/: 01382f1952fe_auction_digest.py  0ad05f1443a0_saved_searches.py  1109a63daa4e_initial_schema.py  1d58e4b5021c_valuation_attempts_and_last_valuation_.py  1d6201a6e2d0_vehicle_offer_split.py  2232ad3fac94_private_listing_previous_asking_price.py  2a0ad4b27278_drop_flipper_scoring_columns_wg5_.py  351a1762d548_private_listings.py  403d74523f36_want_matches_ledger.py  51338a1ffafb_private_listing_location_province.py  54b9d983d047_canonical_url_discovered_via_queue_.py  6b193e16678e_enrichment_concerns_mileage_provenance.py  8544a8e57c2c_enrichment_attempts_and_sparse_listing_.py  a7d3a0c1e927_dashboard_state.py  a7f4c91e3a2b_add_source_lot_row_id.py  a9cef3ed161c_four_state_user_action.py  b8e2f5c6d419_buyer_premium_cap_floor.py  c3a1b4d27fee_notification_attempts.py  d4f7a92e1c83_lot_scheduled_end_at.py  d85563d5b35f_private_listing_natural_key.py  e5b8c1a4f273_comp_lookup_upper_indexes.py  e97670ee9925_vehicle_offer_reliability_counts.py  f0713864cdfd_private_listing_buyer_leverage_columns.py  f6c2e9b81a04_source_alert_state.py  g7d3a0c1e927_dashboard_state.py
docs/: USAGE.md
docs/plans/: 2026-05-09-auction-mvp-plan.md  2026-05-19-enrichment-data-quality-plan.md  2026-05-28-saved-searches-plan.md  (+7 more)
infra/: .env.example  backup.sh  docker-compose.yml
scripts/: install-tailwind.sh  verify_offer_split_migration.py
tests/: conftest.py
(+334 files in other folders)
