[project]
name = "carbuyer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "structlog>=24.1",
    "fastapi>=0.111",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.30",
    "discord.py>=2.4",
    "openai>=1.40",
    "phonenumbers>=8.13",
    "pillow>=12.2.0",
    "python-multipart>=0.0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbuyer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
